Changed input values in companyRegister, and hopefully fixed the spacing for footer in about page.

--- a/src/style/style1.css
+++ b/src/style/style1.css
@@ -95,6 +95,7 @@ ul {
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 100%;
     background-color: black;
     text-align: center;
     text-decoration: none;
@@ -109,12 +110,13 @@ ul {
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 100%;
   background-color: black;
   text-align: center;
   text-decoration: none;
   font-size:13.5px;
   color: white; /* White text */
-  padding: 130px 0px 10px 0px;/* Some padding */
+  padding: 10% 0% 1% 0%;/* Some padding */
   cursor: pointer; /* Pointer/hand icon */
   float: left;  /*Float the buttons side by side */
 }
